--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Lab</string>
+    <string name="app_name">Laboratoria</string>
     <string name="lab01">Lab01</string>
     <string name="lab02">Lab02</string>
     <string name="lab06">Lab06</string>
